--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "dg/twitter-php": "^3.6",
         "eden/sqlite": "^4.0",
-        "ivkos/pushbullet": "3.*"
+        "ivkos/pushbullet": "3.*",
+        "vlucas/phpdotenv": "^2.4"
     }
 }
