more env vars, cleaned up timezones for v.php

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
+dbpath=
+
 targetscreen=
+include_replies=
+day_cutoff=
 
 pbkey=
 
@@ -6,3 +10,5 @@ twCkey=
 twCsec=
 twAtok=
 twAsec=
+
+timezone=America/Toronto
